--- a/src/app/navbar-ieeextreme/navbar-ieeextreme.component.css
+++ b/src/app/navbar-ieeextreme/navbar-ieeextreme.component.css
@@ -2,7 +2,7 @@
     justify-content: center;
 }
 .spacenav{
-    height:50px;
+    height:2.5em;
 }
 .img-container {
     display: block;
@@ -12,13 +12,13 @@
 
 }
 .full-width-white{
-    background: #42a5f5;
+    background: #4dd0e1;
     color: #000000;
     padding:10px;
 }
 .whitebackground-fullwidth{
     width:100%;
-    background: #b2ebf2;
+    background: #4dd0e1;
     background-attachment: fixed;
     background-size: cover;
     position: fixed;
@@ -27,5 +27,5 @@
     color:#ffffff;
 }
 .text-itba-ieee{
-    color: #000000;
+    color: #ffffff;
 }
