--- a/src/app/navbar-ieeextreme/navbar-ieeextreme.component.html
+++ b/src/app/navbar-ieeextreme/navbar-ieeextreme.component.html
@@ -4,7 +4,7 @@
     <div>Participa</div>
     <div>Sponsors</div>
 </div>-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark light-blue darken-3 justify-content-between fixed-top scrolling-navbar" [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark light-blue darken-3 justify-content-between fixed-top" [containerInside]="false">
     <!-- Collapsible content -->
         
         <!-- Links -->
@@ -42,7 +42,7 @@
     </div>
     
 </mdb-navbar>
-<mdb-navbar SideClass="navbar navbar-dark blue lighten-2 justify-content-between fixed-top" [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-dark blue lighten-1 justify-content-between fixed-top" [containerInside]="false">
     <div class="text-itba-ieee" fxLayoutAlign="center center" fxLayout="row">
         <a class="text-itba-ieee" href=""><b>IEEE-ITBA Student Branch</b></a>&nbsp;>&nbsp;<b>IEEExtreme</b>
     </div>
