--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <!--Navbar-->
 
 <!--<header class="h-100">-->
-    <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark light-blue darken-3 justify-content-between fixed-top scrolling-navbar" [containerInside]="true">
+    <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark light-blue darken-3 justify-content-between fixed-top" [containerInside]="true">
         <!-- Collapsible content -->
             
             <!-- Links -->
