--- a/src/app/about-ieeeitba/about-ieeeitba.component.html
+++ b/src/app/about-ieeeitba/about-ieeeitba.component.html
@@ -5,7 +5,7 @@
         <div class="aboutIEEE">
             
                 <!--<h1 class="font-weight-bold deep-orange-lighter-hover mb-3">IEEE ITBA</h1>-->
-                <img class="mainIcon" src="assets/icons/IEEE ITBA STUDENT BRANCH.png">
+                <img class="mainIcon" src="assets/icons/ITBA IEEE 2020 LOGO (16 mar).png">
                 
                 <p class="text">
                   Somos una organización estudiantil del ITBA cuyo objetivo es el desarrollo de la tecnología y sus aplicaciones para el avance de la humanidad.
