--- a/src/app/itba-ieee-marca/itba-ieee-marca.component.html
+++ b/src/app/itba-ieee-marca/itba-ieee-marca.component.html
@@ -1,7 +1,7 @@
 
 <div class="global-container" fxLayoutAlign="center center" fxLayout="column">
     <div class="logo-container" fxLayoutAlign="center center" fxLayout="row">
-        <img class="logo" src="assets/image/ITBA 60 AÑOS - Negativo.png">
+        <img class="logo" src="assets/image/Marca-ITBA-Color-Blanco-ALTA.png">
         <img class="logo-ieee" src="assets/image/ieee_mb_white.png">
         
     </div> 
