--- a/src/app/ieeextreme/ieeextreme.component.css
+++ b/src/app/ieeextreme/ieeextreme.component.css
@@ -1,7 +1,7 @@
 .title{
     color: #ff6d00;
     font-weight: bold;
-    padding: 50px;
+    padding: 20px;
     text-align: center;
 }
 .title2{
@@ -138,4 +138,8 @@
 .logo-sponsor{
     width:200px;
     margin:50px;
+}
+.image{
+    width:100%;
+    padding:100px;
 }
