--- a/src/app/ieeextreme/ieeextreme.component.html
+++ b/src/app/ieeextreme/ieeextreme.component.html
@@ -72,7 +72,7 @@
     <div class="ieeextreme2" fxLayoutAlign="center center" fxLayout="row">
       <div class="information" fxLayout.lt-md="column" fxLayout.gt-sm="row">
         <div [fxFlex.gt-sm]="50">
-            <h1 class="title2">¡Resolve problemas en equipo! </h1>
+            <h1 class="title2">¡Resolvé problemas en equipo! </h1>
             <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
                 <p class="text"> La IEEExtreme programming competition es una competencia de programación de 24 hs donde competidores de distintas universidades y carreras dedican gran esfuerzo y motivación en pos de incrementar su habilidad de resolver problemas en equipo y pasar un gran momento.</p>
             </div>
@@ -91,7 +91,7 @@
               <img src="assets/image/winning.png">
           </div>
           <div [fxFlex.gt-sm]="50">
-              <h1 class="title2">¿Queres participar? </h1>
+              <h1 class="title2">¿Querés participar? </h1>
               <div class="circle-container" fxLayoutAlign="center center" fxLayout="row">
                   <p class="text"> Abrimos un formulario para aquellos que esten interesados en la competencia de este año, cuando abramos las inscripciones les mandaremos una notificación. ¡Aprovecha el tiempo para conseguir un equipo y entrenar! </p>
               </div>
