--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -34,7 +34,7 @@
                 </ul>
                 <ul class="navbar-nav ml-auto nav-flex-icons">
                     <li class="nav-item">
-                        <a class="nav-link waves-effect waves-light">
+                        <a href="https://www.instagram.com/ieee.itba" class="nav-link waves-effect waves-light">
                             <i class="fab fa-instagram"></i>
                         </a>
                     </li>
