--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,1 +1,13 @@
-<p class="titulo">IEEE ITBA Blog</p>
+<div class="global" fxLayoutAlign="center center" fxLayout="column">
+    <div class="main-container" fxLayoutAlign="center center" fxLayout="column">
+        <div class="title-container" fxLayoutAlign="center center" fxLayout="row">
+            <div class="title">IEEE ITBA</div>
+            <div class="title bold">Blog</div>
+            <div>
+                <img class="logo-image" src="assets/image/Logo circular/IEEE-Logo-Dark.png">
+            </div>
+        </div>
+
+        Contenido
+    </div>
+</div>
