--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -1,4 +1,23 @@
-.titulo{
-    font-size: 100px;
+.global{
+    background: #f3f3f3;
+    padding:10px;
+}
+.title{
+    font-size: 50px;
     text-align: center;
+    padding:10px;
+}
+.bold{
+    font-weight: bold;
+}
+.title-container{
+    background: #f3f3f3;
+}
+
+.main-container{
+    text-align: left;
+    min-width:1500px;
+}
+.logo-image{
+    width:90px;
 }
