--- a/src/app/equipo/equipo.component.html
+++ b/src/app/equipo/equipo.component.html
@@ -32,7 +32,7 @@
           nombre="Carola"
           apellido="Pedrosa"
           cargo="Secretaria General"
-          imageurl="https://media-exp1.licdn.com/dms/image/C4E03AQHLMTnFH_ToeQ/profile-displayphoto-shrink_200_200/0?e=1588809600&v=beta&t=kNzbmLfnmmK-FNIHDoQyGLLpXJO0LJKOXtRLVNJwD5U"
+          imageurl="assets/image/CAROLA-PEDROSA.JPG"
           email="cpedrosa@itba.edu.ar"
           linkedin="https://www.linkedin.com/in/carola-pedrosa-87342b1a3/"
       >
