--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="titleBar">
-        <button href="#" class="transparentButton" mdbWavesEffect><i class="far fa-arrow-alt-circle-left"></i>&nbsp;<div id="homeText">Home</div></button>
+        <button onclick="location.href='index.html'" class="transparentButton" mdbWavesEffect><i class="far fa-arrow-alt-circle-left"></i>&nbsp;<div id="homeText">Home</div></button>
         <h1>Cursos de Python</h1>
     </div>
 
