--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -97,13 +97,18 @@
 
 </body>
 <footer>
-    <table style="width:100%">
-        <tr>
-            <td><img src="./../../assets/image/ieee_mb_white.png" alt="Logo IEEE" height="90vmin"></td>
-            <td><img src="./../../assets/image/Logo circular/IEEE-Logo-Darkest.png" height="100vmin"></td>
-            <td><img src="./../../assets/image/ITBA 60 AÑOS - Negativo.png" alt="Logo ITBA" height="180vmin"></td>
-          </tr>
-    </table>  
-    
+    <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <img src="./../../assets/image/ieee_mb_white.png" alt="Logo IEEE" width="150vmin">
+          </div>
+          <div class="col-sm">
+            <img src="./../../assets/image/Logo circular/IEEE-Logo-Darkest.png" width="100vmin">
+          </div>
+          <div class="col-sm">
+            <img src="./../../assets/image/ITBA 60 AÑOS - Negativo.png" alt="Logo ITBA" width="180vmin">
+          </div>
+        </div>
+      </div>
 </footer>
 </html>
