--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -20,7 +20,7 @@
 
     <!-- Introductory text -->
     <div class="halfRight">
-        <p>Esta es la 4ta edición del curso introductorio de Python organizado por IEEE-ITBA y Computer Society, un curso que empezó con 35 participantes en su primera edición, 70 en la segunda y 100 en la tercera, que en esta ocasión será realizado mediante un formato online. Es un curso escrito para personas que no son programadoras, pero que indirectamente necesitan la programación en su campo. Un público que hoy en día con el auge de la informática es cada vez más grande, y, que suele no tener mucho tiempo disponible, por eso está pensado como un curso corto de 4 clases de 3 horas, que pueda ser realizado como actividad complementaria al estudio curricular o al trabajo, en el cual haya un gran énfasis en los ejemplos prácticos, que tengan relación con la aplicación en la vida profesional y la asistencia personalizada a los participantes, ya que el público suele ser muy heterogéneo, tanto de personas de distintas carreras, como de distintas profesiones, como de distintas edades.</p>
+        <p>Este público es cada vez más grande pero típicamente no tienen tiempo disponible. Con esto en mente, el curso fue diseñado con un formato amigable de cuatro clases de tres horas de forma tal que pueda realizarse como actividad complementaria al estudio curricular o al trabajo, con un fuerte énfasis en ejemplos prácticos que se relacionen fácilmente con casos de aplicación realistas para la vida profesional. A esto se suma la asistencia personalizada para dar respuesta a la gran heterogeneidad de los participantes, considerando las diferentes carreras, profesiones y edades presentes.</p>
     </div>
 
     <!-- Cards Temario -->
@@ -79,6 +79,7 @@
         </mdb-card>
     </div>
 
+    <!-- Consultas -->
     <div class="halfRight">
         <!-- Card -->
         <mdb-card>
@@ -100,13 +101,13 @@
     <div class="container">
         <div class="row">
           <div class="col-sm">
-            <img src="./../../assets/image/ieee_mb_white.png" alt="Logo IEEE" width="150vmin">
+            <img src="./../../assets/image/ieee_mb_white.png" alt="Logo IEEE" width="190vmin">
           </div>
           <div class="col-sm">
             <img src="./../../assets/image/Logo circular/IEEE-Logo-Darkest.png" width="100vmin">
           </div>
           <div class="col-sm">
-            <img src="./../../assets/image/ITBA 60 AÑOS - Negativo.png" alt="Logo ITBA" width="180vmin">
+            <img src="./../../assets/image/Marca-ITBA-Color-Blanco-ALTA.png" alt="Logo ITBA" width="170vmin">
           </div>
         </div>
       </div>
