--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -9,6 +9,85 @@
     <app-newnavbar></app-newnavbar>
 </header>
 <body>
-    
+
+  <!-- Inicio -->
+  <div class="topbottomLine">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <img src="./../../assets/image/Logo circular/IEEE-Logo-Darkest.png" height="250vmin" alt="Logo ITBA-IEEE">
+        </div>
+        <div class="col-sm">
+          <div class="whiteRoundedBlock" id="mainTxt">Somos una organización estudiantil del ITBA cuyo objetivo es el
+            desarrollo de la tecnología y sus aplicaciones para el avance de la humanidad.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Educacion, Competencia, Contacto -->
+  <div class="topbottomLine">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-sm">
+          <!-- Educacion -->
+          <mdb-card>
+            <mdb-card-img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg" alt="Card image cap">
+            </mdb-card-img>
+            <mdb-card-body>
+        
+              <mdb-card-title>
+                <h4>Educación</h4>
+              </mdb-card-title>
+        
+              <mdb-card-text> Sostenemos que el aprendizaje permanente mediante técnicas didácticas a la altura es indispensable
+                para difundir el conocimiento. </mdb-card-text>
+        
+            </mdb-card-body>
+          </mdb-card>
+        </div>
+
+        <div class="col-sm">
+          <!-- Competencia -->
+          <mdb-card>
+            <mdb-card-img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg" alt="Card image cap">
+            </mdb-card-img>
+            <mdb-card-body>
+        
+              <mdb-card-title>
+                <h4>Competencia</h4>
+              </mdb-card-title>
+        
+              <mdb-card-text> Entendemos que la superación permanente mediante competencias puede generar ambientes donde los
+                limites son dificiles de encontrar. </mdb-card-text>
+
+            </mdb-card-body>
+          </mdb-card>
+        </div>
+
+        <div class="col-sm">
+          <!-- Contacto -->
+          <mdb-card>
+            <mdb-card-img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg" alt="Card image cap">
+            </mdb-card-img>
+            <mdb-card-body>
+        
+              <mdb-card-title>
+                <h4>Contactos</h4>
+              </mdb-card-title>
+        
+              <mdb-card-text> Defendemos que la busqueda y renovación permanente de conexiones es clave para cualquier mejora
+                técnologica. </mdb-card-text>
+
+            </mdb-card-body>
+          </mdb-card>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
 </body>
+<app-footer></app-footer>
 </html>
