--- a/src/app/newnavbar/newnavbar.component.html
+++ b/src/app/newnavbar/newnavbar.component.html
@@ -1,1 +1,45 @@
-<p>newnavbar works!</p>
+<!--Navbar-->
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark" id="nav" mdbStickyHeader>
+
+  <!-- Navbar brand -->
+  <mdb-navbar-brand><a class="navbar-brand" href="#"><img src="./../../assets/image/Logo circular/IEEE-Logo-Darkest.png" height="60vmin" alt="Icon IEEE-ITBA"></a></mdb-navbar-brand>
+
+  <!-- All Items -->
+  <links>
+  
+    <!-- Menu -->
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <button (click)="scrollTo('#caca')" class="buttonNavbar" type="button">Home</button>
+      </li>
+      <li class="nav-item">
+        <button (click)="scrollTo('#about-ieee')" class="buttonNavbar" type="button">Eventos</button>
+      </li>
+      <li class="nav-item">
+        <button (click)="scrollTo('#about-ieee')" class="buttonNavbar" type="button">Iniciativas</button>
+      </li>
+      <li class="nav-item">
+        <button (click)="scrollTo('#about-ieee')" class="buttonNavbar" type="button">Equipo</button>
+      </li>
+      <li class="nav-item">
+        <button (click)="scrollTo('#about-ieee')" class="buttonNavbar" type="button">Contacto</button>
+      </li>
+    </ul>
+    
+    <!-- Icons on right -->
+    <ul class="navbar-nav ml-auto nav-flex-icons">
+      <li class="nav-item">
+        <a href="#" class="nav-link">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="https://www.instagram.com/ieee.itba/" class="nav-link">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </li>
+    </ul>
+
+  </links>
+
+</mdb-navbar>
