--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -26,68 +26,58 @@
   </div>
 
   <!-- Educacion, Competencia, Contacto -->
-  <div class="topbottomLine">
-    <div class="container">
-      <div class="row">
-
-        <div class="col-sm">
-          <!-- Educacion -->
-          <mdb-card>
-            <mdb-card-img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg" alt="Card image cap">
-            </mdb-card-img>
-            <mdb-card-body>
-        
-              <mdb-card-title>
-                <h4>Educación</h4>
-              </mdb-card-title>
-        
-              <mdb-card-text> Sostenemos que el aprendizaje permanente mediante técnicas didácticas a la altura es indispensable
-                para difundir el conocimiento. </mdb-card-text>
-        
-            </mdb-card-body>
-          </mdb-card>
-        </div>
-
-        <div class="col-sm">
-          <!-- Competencia -->
-          <mdb-card>
-            <mdb-card-img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg" alt="Card image cap">
-            </mdb-card-img>
-            <mdb-card-body>
-        
-              <mdb-card-title>
-                <h4>Competencia</h4>
-              </mdb-card-title>
-        
-              <mdb-card-text> Entendemos que la superación permanente mediante competencias puede generar ambientes donde los
-                limites son dificiles de encontrar. </mdb-card-text>
-
-            </mdb-card-body>
-          </mdb-card>
-        </div>
-
-        <div class="col-sm">
-          <!-- Contacto -->
-          <mdb-card>
-            <mdb-card-img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg" alt="Card image cap">
-            </mdb-card-img>
-            <mdb-card-body>
-        
-              <mdb-card-title>
-                <h4>Contactos</h4>
-              </mdb-card-title>
-        
-              <mdb-card-text> Defendemos que la busqueda y renovación permanente de conexiones es clave para cualquier mejora
-                técnologica. </mdb-card-text>
-
-            </mdb-card-body>
-          </mdb-card>
-        </div>
-
-      </div>
+  <div class="bottomLine">
+    <div class="card-group">
+  
+      <!-- Educacion -->
+      <mdb-card>
+        <mdb-card-img src="./../../assets/image/education.JPG" alt="Foto de Curso de Python"></mdb-card-img>
+        <mdb-card-body>
+  
+          <mdb-card-title>
+            <h4>Educación</h4>
+          </mdb-card-title>
+  
+          <mdb-card-text> Sostenemos que el aprendizaje permanente mediante técnicas didácticas a la altura es
+            indispensable
+            para difundir el conocimiento. </mdb-card-text>
+  
+        </mdb-card-body>
+      </mdb-card>
+  
+      <!-- Competencia -->
+      <mdb-card>
+        <mdb-card-img src="./../../assets/image/ieeextreme5.jpg" alt="Foto de Competencia de programacion"></mdb-card-img>
+        <mdb-card-body>
+  
+          <mdb-card-title>
+            <h4>Competencia</h4>
+          </mdb-card-title>
+  
+          <mdb-card-text> Entendemos que la superación permanente mediante competencias puede generar ambientes donde los
+            limites son dificiles de encontrar. </mdb-card-text>
+  
+        </mdb-card-body>
+      </mdb-card>
+  
+      <!-- Contacto -->
+      <mdb-card>
+        <mdb-card-img src="./../../assets/image/contacts.JPG" alt="Foto durante ICIT2020"></mdb-card-img>
+        <mdb-card-body>
+  
+          <mdb-card-title>
+            <h4>Contactos</h4>
+          </mdb-card-title>
+  
+          <mdb-card-text> Defendemos que la busqueda y renovación permanente de conexiones es clave para cualquier mejora
+            técnologica. </mdb-card-text>
+  
+        </mdb-card-body>
+      </mdb-card>
     </div>
   </div>
 
+  
 </body>
 <app-footer></app-footer>
 </html>
