--- a/src/app/newnavbar/newnavbar.component.html
+++ b/src/app/newnavbar/newnavbar.component.html
@@ -10,19 +10,19 @@
     <!-- Menu -->
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <button (click)="scrollTo('#caca')" class="buttonNavbar" type="button">Home</button>
+        <button (click)="scrollTo('#home')" class="buttonNavbar" type="button">Home</button>
       </li>
       <li class="nav-item">
-        <button (click)="scrollTo('#about-ieee')" class="buttonNavbar" type="button">Eventos</button>
+        <button (click)="scrollTo('#eventos')" class="buttonNavbar" type="button">Eventos</button>
       </li>
       <li class="nav-item">
-        <button (click)="scrollTo('#about-ieee')" class="buttonNavbar" type="button">Iniciativas</button>
+        <button (click)="scrollTo('#iniciativas')" class="buttonNavbar" type="button">Iniciativas</button>
       </li>
       <li class="nav-item">
-        <button (click)="scrollTo('#about-ieee')" class="buttonNavbar" type="button">Equipo</button>
+        <button (click)="scrollTo('#equipo')" class="buttonNavbar" type="button">Equipo</button>
       </li>
       <li class="nav-item">
-        <button (click)="scrollTo('#about-ieee')" class="buttonNavbar" type="button">Contacto</button>
+        <button (click)="scrollTo('#contacto')" class="buttonNavbar" type="button">Contacto</button>
       </li>
     </ul>
     
