--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -215,6 +215,21 @@
     <app-team></app-team>
   </div>
 
+  <!-- Contacto -->
+  <div class="noLine">
+    <h1 id="contacto">Contacto</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-sm">
+          <div class="whiteRoundedBlock" style="text-align: left;">Para consultas generales enviar un mail a <a href="mailto:ieee@itba.edu.ar">ieee@itba.edu.ar</a>. Para consultas sobre sponsorship en nuestros eventos contactar a cualquier miembro de nuestro equipo de fundraising.</div>
+        </div>
+        <div class="col-sm" id="mailus">
+          <a href="mailto:ieee@itba.edu.ar" class="whitebckg"><i class="fas fa-at"></i><h2>Mail Us&nbsp;<i class="fas fa-reply"></i></h2></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 <app-footer></app-footer>
