--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,7 +1,8 @@
 <mat-tab-group dynamicHeight>
     <mat-tab label="2020">
-
+        <br>
         <mat-accordion>
+            <!-- CD -->
             <mat-expansion-panel>
                 <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -30,7 +31,7 @@
                             </mdb-card-body>
                         </mdb-card>
 
-                        <!-- Ariel Nowik -->
+                        <!-- Dante Kieniguiel -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
                                 <mdb-card-img src="https://mdbootstrap.com/img/Photos/Others/men.jpg"></mdb-card-img>
@@ -38,8 +39,8 @@
                             </div>
 
                             <mdb-card-body cascade="true" class="text-center pb-0 px-0">
-                                <h4 class="card-title"><strong>Ariel Nowik</strong></h4>
-                                <h5>Presidente</h5>
+                                <h4 class="card-title"><strong>Dante Kieniguiel</strong></h4>
+                                <h5>Vicepresidente</h5>
 
                                 <!-- Linkedin -->
                                 <a mdbWavesEffect class="cardIcon"><i class="fab fa-linkedin"></i></a>
@@ -48,7 +49,7 @@
                             </mdb-card-body>
                         </mdb-card>
 
-                        <!-- Ariel Nowik -->
+                        <!-- Franco Moriconi -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
                                 <mdb-card-img src="https://mdbootstrap.com/img/Photos/Others/men.jpg"></mdb-card-img>
@@ -56,8 +57,8 @@
                             </div>
 
                             <mdb-card-body cascade="true" class="text-center pb-0 px-0">
-                                <h4 class="card-title"><strong>Ariel Nowik</strong></h4>
-                                <h5>Presidente</h5>
+                                <h4 class="card-title"><strong>Franco Moriconi</strong></h4>
+                                <h5>Tesorero</h5>
 
                                 <!-- Linkedin -->
                                 <a mdbWavesEffect class="cardIcon"><i class="fab fa-linkedin"></i></a>
@@ -66,7 +67,7 @@
                             </mdb-card-body>
                         </mdb-card>
 
-                        <!-- Ariel Nowik -->
+                        <!-- Carola Pedrosa -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
                                 <mdb-card-img src="https://mdbootstrap.com/img/Photos/Others/men.jpg"></mdb-card-img>
@@ -74,8 +75,8 @@
                             </div>
 
                             <mdb-card-body cascade="true" class="text-center pb-0 px-0">
-                                <h4 class="card-title"><strong>Ariel Nowik</strong></h4>
-                                <h5>Presidente</h5>
+                                <h4 class="card-title"><strong>Carola Pedrosa</strong></h4>
+                                <h5>Secretaria General</h5>
 
                                 <!-- Linkedin -->
                                 <a mdbWavesEffect class="cardIcon"><i class="fab fa-linkedin"></i></a>
@@ -88,6 +89,7 @@
                 </div>
             </mat-expansion-panel>
 
+            <!-- Mediacom -->
             <mat-expansion-panel>
                 <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -174,6 +176,7 @@
                 </div>
             </mat-expansion-panel>
 
+            <!-- I+D -->
             <mat-expansion-panel>
                 <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -260,6 +263,7 @@
                 </div>
             </mat-expansion-panel>
 
+            <!-- Fundraising -->
             <mat-expansion-panel>
                 <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -346,6 +350,7 @@
                 </div>
             </mat-expansion-panel>
 
+            <!-- Educacion -->
             <mat-expansion-panel>
                 <mat-expansion-panel-header>
                     <mat-panel-title>
@@ -435,7 +440,8 @@
         </mat-accordion>
 
     </mat-tab>
-    <mat-tab label="2019">
-
+    <mat-tab label="2019" disabled>
+        <br>
+        <h5>Equipo de 2019</h5>
     </mat-tab>
 </mat-tab-group>
