--- a/src/app/newnavbar/newnavbar.component.html
+++ b/src/app/newnavbar/newnavbar.component.html
@@ -29,7 +29,7 @@
     <!-- Icons on right -->
     <ul class="navbar-nav ml-auto nav-flex-icons">
       <li class="nav-item">
-        <a href="#" class="nav-link">
+        <a href="https://www.linkedin.com/company/ieee-itba" class="nav-link">
           <i class="fab fa-linkedin-in"></i>
         </a>
       </li>
